# NostraEngine

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  INSTALL_README.md.in  NostraEngine.sln  README.md  main.cpp  testmain.cpp.in
GLAD/: CMakeLists.txt
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
GLFW/: CMakeLists.txt
NostraEngine/: CMakeLists.txt  NostraEngine.vcxproj  NostraEngine.vcxproj.filters
NostraEngine/dependencies/include/glad/: glad.h
NostraEngine/dependencies/lib/nostrautils/Debug/x86/: NostraUtils_STATIC.lib
NostraEngine/doc/: CMakeLists.txt  Doxyfile.in  Warnings.txt
NostraEngine/doc/resources/: Doxyfile
NostraEngine/src/header/core/: StdIncludes.hpp
NostraEngine/src/header/nostraengine/: NostraEngine.hpp
NostraEngine/src/header/nostraengine/core/: ConfigurationManagement.hpp  ErrorCodes.hpp  Event.hpp  EventObservable.hpp  EventObserver.hpp  Initializable.hpp  NostraEngine.hpp  Plugin.hpp  PluginManager.hpp  ResourceManagement.hpp  StdIncludes.hpp  TestMainLoop.hpp  Updatable.hpp
NostraEngine/src/header/nostraengine/core/configuration_mngt/: ConfigrationSource.hpp  ConfigurationManager.hpp  ConfigurationSource.hpp  ConfigurationSourceFactory.hpp
NostraEngine/src/header/nostraengine/core/materialsystem/: ShaderCompiler.hpp
NostraEngine/src/header/nostraengine/core/resource_mngt/: ByteResource.hpp  Resource.hpp  ResourceLoader.hpp  ResourceManager.hpp  ResourceMetadata.hpp  ResourceType.hpp  TextResource.hpp
NostraEngine/src/header/nostraengine/material_system/: AbstractSyntaxTree.hpp  CompFrontend.hpp  GLSLCompiler.hpp  GLSLPreProcessor.hpp  Generator.hpp  Mapping.hpp  Material.hpp  MaterialEditor.hpp  NormalMapping.hpp  ParallaxMapping.hpp  ParrallaxMapping.hpp  PreProcessor.hpp  Program.hpp  Shader.hpp  ShaderClass.hpp  ShaderClassInterface.hpp  ShaderCompiler.hpp  Texture.hpp  TextureMapping.hpp  Tokenizer.hpp
NostraEngine/src/header/nostraengine/renderer/: RenderableImpl.hpp  RenderableImplFactory.hpp  Renderer.hpp
NostraEngine/src/header/nostraengine/scene/: Actor.hpp  RenderableActor.hpp  Scene.hpp  Tranformation.hpp
NostraEngine/src/header/nostraengine/utility/: SQLite.hpp
NostraEngine/src/header/nostraengine/window/: Device.hpp  GLFWMonitor.hpp  GLFWWindow.hpp  Monitor.hpp  Window.hpp
NostraEngine/src/source/nostraengine/core/: ErrorCodes.cpp  Event.cpp  EventObservable.cpp  EventObserver.cpp  Initializable.cpp  NostraEngine.cpp  Plugin.cpp  PluginManager.cpp  ResourceManagement.cpp  StdIncludes.cpp  TestMainLoop.cpp  Updatable.cpp  test.cpp
NostraEngine/src/source/nostraengine/core/configuration_mngt/: ConfigurationManager.cpp  ConfigurationSource.cpp  ConfigurationSourceFactory.cpp
NostraEngine/src/source/nostraengine/core/resource_mngt/: ByteResource.cpp  Resource.cpp  ResourceLoader.cpp  ResourceManager.cpp  ResourceMetadata.cpp  ResourceType.cpp  TextResource.cpp
NostraEngine/src/source/nostraengine/glad/: glad.c
NostraEngine/src/source/nostraengine/material_system/: AbstractSyntaxTree.cpp  CMakeLists.txt  CompFrontend.cpp  GLSLCompiler.cpp  GLSLPreProcessor.cpp  Generator.cpp  Mapping.cpp  Material.cpp  MaterialEditor.cpp  NormalMapping.cpp  ParallaxMapping.cpp  ParrallaxMapping.cpp  Parser.ypp  PreProcessor.cpp  Shader.cpp  ShaderClass.cpp  ShaderCompiler.cpp  Texture.cpp  TextureMapping.cpp  Tokenizer.cpp  Tokenizer.l  lex.yy.cc  tmpTokenizer  tmpTokenizer.cpp
NostraEngine/src/source/nostraengine/renderer/: RenderableImplFactory.cpp  Renderer.cpp
NostraEngine/src/source/nostraengine/scene/: Actor.cpp  RenderableActor.cpp  Scene.cpp  Transformation.cpp
NostraEngine/src/source/nostraengine/utility/: SQLite.cpp
NostraEngine/src/source/nostraengine/window/: Device.cpp  GLFWMonitor.cpp  GLFWWindow.cpp  Window.cpp
NostraUtils/: CMakeLists.txt
NostraUtils/Nostra Utils/: CMakeLists.txt
NostraUtils/src/source/nostrautils/core/: SystemInformation.cpp
Plugins/: CMakeLists.txt
Plugins/GLFWWindow/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.hpp  GLFWWindow.pconf  GLFWWindowPlugin.cpp  GLFWWindowPlugin.hpp
Plugins/GLFWWindow/GLFW/: CMakeLists.txt
Plugins/GLFWWindow/GLFW/src/: CMakeLists.txt
Plugins/GLFWWindow/src/window/: GLFWMonitor.cpp  GLFWMonitor.hpp  GLFWWindow.cpp  GLFWWindow.hpp
Plugins/GLFWWindow/window/: GLFWWindow.cpp  GLFWWindow.hpp
Plugins/GLMaterial/: CMakeLists.txt  GLMaterial.pconf  GLMaterialPlugin.cpp  GLMaterialPlugin.hpp
Plugins/GLMaterial/src/material_system/: GLMaterial.hpp
Plugins/GLRenderable/: CMakeLists.txt  GLRenderablePlugin.cpp  GLRenderablePlugin.hpp
Plugins/GLRenderable/src/renderer/: GLRenderableImpl.cpp  GLRenderableImpl.hpp  GLRenderableImplFactory.cpp  GLRenderableImplFactory.hpp  GLRenderer.cpp  GLRenderer.hpp
Plugins/GLRenderableImpl/: CMakeLists.txt  GLRenderableImpl.pconf  GLRenderableImplPlugin.cpp  GLRenderableImplPlugin.hpp
Plugins/GLSLGenerator/: CMakeLists.txt  GLSLGenerator.pconf  GLSLGeneratorPlugin.cpp  GLSLGeneratorPlugin.hpp
Plugins/GLSLGenerator/src/generator/: GLSLGenerator.cpp  GLSLGenerator.hpp
Plugins/GLSLProgram/: CMakeLists.txt  GLSLProgram.pconf  GLSLProgramPlugin.cpp  GLSLProgramPlugin.hpp
Plugins/GLSLProgram/src/material_system/: GLSLProgram.cpp  GLSLProgram.hpp
Plugins/IniConfiguration/: CMakeLists.txt  IniConfiguration.pconf  IniConfigurationPlugin.cpp  IniConfigurationPlugin.hpp
Plugins/IniConfiguration/src/iniconf/: IniConfigurationSource.cpp  IniConfigurationSource.hpp  IniConfigurationSourceFactory.cpp  IniConfigurationSourceFactory.hpp
Plugins/OpenGLTexture/: CMakeLists.txt  OpenGLTexture.pconf  OpenGLTexturePlugin.cpp  OpenGLTexturePlugin.hpp
Plugins/OpenGLTexture/src/material_system/: OpenGLTexture.cpp  OpenGLTexture.hpp
Plugins/TestPlugin/: CMakeLists.txt  TestPlugin.pconf  TestPluginPlugin.cpp  TestPluginPlugin.hpp
Plugins/TestPlugin2/: CMakeLists.txt  TestPlugin2.pconf  TestPluginPlugin2.cpp  TestPluginPlugin2.hpp
SQLite3/: CMakeLists.txt
SQLite3/include/SQLite3/: sqlite3.h
Shader/: FragmentShader.fs  (+8 more)
materialcompiler/: CMakeLists.txt  Parser.y  Tokenizer.l
(+13 files in other folders)
